# parallel-aks

./: .gitignore  CMakeLists.txt  README.md  aks-bit.hpp  aks-serial.cc  aks-test.cc  aks-threads.cc  aks-util.cc  aks-util.hpp  bit-iterator.hpp  bit_container.cc  modular.hpp  polynomial.cc  polynomial.hpp  ring.hpp  totient.cc  util.cc  util.hpp
cmake/: FindCBLAS.cmake  FindCUB.cmake
tst/: test.sh
